migrate .md to .mdx

--- a/src/blog/beralih-ke-linux.mdx
+++ b/src/blog/beralih-ke-linux.mdx
@@ -2,38 +2,23 @@
 path: "/blog/alasan-beralih-ke-gnu-linux"
 date: "2017-03-12 12:02:00"
 title: "Alasan Beralih Ke GNU/LINUX"
+banner: ./images/polyglot-banner.jpg
 ---
 
 Tidak ada yang spesifik mengenai mengapa saya beralih sepenuhnya ke GNU Linux. Setidaknya sampai saya paham beberapa hal mengenai Free Softwre, Open Source, lisensi dan pembajakan (kebanyakan orang menggunakan kata itu). Sebenarnya saya sudah mengenal beberapa distribusi linux semenjak SMK.  Diantaranya Debian dan Ubuntu dan beberapa distro asing yang sempat dipakai teman saya (tentunya yang lebih ahli saat itu). Sejauh ini, yang saya tau, distro tersebut adalah Slackware dan Fedora. Saat itu, saya bahkan tidak memperhatikan betul nama-nama distro tersebut(bahkan arti kata distro pun saya tidak tahu saat itu). Karena keterbatasan tidak memiliki peragkat komputer, saya tidak benar-benar menanggapi perihal distro-distro yang ada. Yang saya tau, itu adalah mata pelajaran yang diajarkan disekolah dan mau tidak mau kami harus mempelajarinya.
 
-
-
 Saya memiliki perangkat laptop semenjak kuliah semester 2. Sejak saat itu, saya melakukan banyak eksplorasi. Terus belajar dan belajar. Saat itu, saya belum sempat memikirkan tentang OS GNU Linux. Tentu saja, Windows masih menjadi pilihan utama. Eksplorasi pun dimulai. Dari mengumpulkan software-software utilitas seperti tool video player, music, koleksi OS windows hampir semua versi sampai download game-game besar lainnya via torrent. Hidup saya bahagia saat itu. Tanpa tahu kalau itu semua tidak sesuai dengan apa yang seharusnya. Maklumlah, saat itu saya masih demam panggung memiliki laptop baru. Jadi apapun itu, yang ada dipikiran saya, saya coba dan saya praktekkan. Cukup mudah.
-
-
 
 Perangkat laptop saya bisa dibilang perangkat kelas biasa. Kekuatan processor mentok di 1,5 Hz dual core. Dengan VGA kurang lebih 1 GB. Sudah banyak game yang pernah saya mainkan di Laptop saya. Mulai dari sekelas nitendo sampai game setara XBOX. Tentunya itu semua berjalan di atas OS windows (dalam tanda kutip). Saya terus ber eksplorasi menggunakan laptop kesayangan ini. Banyak sekali ilmu yang saya dapat dengan memiliki perangkat laptop.
 
-
-
 Diakhir semester 4 masa kuliah saya, Saya mulai memikirkan tentang linux. Saya ingin bernotsalgia dengan pelajaran masa-masa SMK dulu. Saya memutuskan untuk mendownload salah satu Distro. Sebelum memutuskan untuk memakai Distro Ubuntu Studio 15.04, saya mencari banyak referensi. Saya sempat mencoba live usb Ubuntu 15.10. Dari referensi yang saya dapat, banyak yang menyarankan untuk memakai ubuntu untuk memulai menyelam di dunia GNU/linux. Akhirnya saya memutuskan memakai Ubuntu Studio 15.04. Mengapa? Karena Ubuntu Studio menyediakan built-in multimedia apps yang sangat berguna bagi keseharian aktifitas saya. Itulah point pentingnya.
-
-
 
 Jujur, saya juga sudah mencoba hampir semua varian windows. Windows 7, 8, XP dan yang terbaru windows 10. Bahkan saya juga pernah mencoba windows tua 1, 2, 3.1 dan 95 (pada virtualbox). Beberapa memiliki performa yang kurang memuaskan. Windows 7 misalnya. Banyak driver yang tidak sepenuhnya kompatibel. Performa cukup ringan saya peroleh saat menggunakan windows XP namun tentu dengan mengorbankan mode khusus pada settingan bios dan driver bawaan dari cd yang sepenuhnya tidak kompatibel. Tentu saat itu, saya sangat jauh dari semangat open source maupun Free software. Semua saya lakukan atas dasar alasan pribadi. Belajar dan eksplorasi. Walaupun sebenarnya konsep ini tidak tepat. Saat itu ibaratnya saya hanya bermain dihalaman rumah dengan keindahan dan kerindangan pohonnya. Serta angin sepoi-sepoi. Saya belum berfikir bagaimana taman diluar sana? apakah seindah disini?
 
-
-
 Kesimpulan tersebut membawa saya pada beberapa informasi mengenai opensource. Namun, masih terlalu dangkal. Ya, sedangkal mengartikan bajakan. Namun, saya masih berdalih dengan alasan eksplorasi dan pembelajaran.
-
-
 
 Saya terus mencari informasi mengenai Ubuntu. Saat itu saya ingin melakukan konfigurasi DNS server pada ubuntu. Mencari tutorial kesana kemari. Konfigurasi DNS seperti SMK dulu. Disusul dengan setting Web Server dan CMS. Di sisi lain, saya masih belum terbiasa denga GUI bawaan ubuntu studio dengan panel bar diatas. Saya melakukan kostumisasi pada beberapa elemen di desktop sehingga mirip dengan tampilan windows 7 classic. Saya belum bisa move on dari tampilan GUI windows. Bahkan saya mengunduh window theme dengan nuansa windows 10. migrasi yang masih setengah-setengah.
 
-
-
 Perlahan tapi pasti saya mulai menyelam cukup dalam pada OS Ubuntu saya. Beberapa konfigurasi server sudah saya lakukan. Install service ini itu. Saya juga bergabung dengan laman grup Ubuntu Indonesia di Facebook untuk mencari informasi lebih banyak lagi. Semangat opensource mulai menular pada saya. Saat itu, sekitar awal semester 5 kuliah, saya benar-benar menggunakan OS GNU/Linux tanpa mengingat windows lagi. Mengerjakan tugas kuliah, presentasi, internetan. Semua dilakukan di laptop saya. Di Ubuntu. Saya juga sempat mengajak teman saya untuk coba memakai Ubuntu. Namun kebanyakan mereka takut tidak bisa mengoperasikannya. Itu merupakan jawaban yang wajar sih. Karena saya juga merasa dibutuhkan kemampuan yang extra untuk benar-benar mengoperasikannya. GNU/Linux ditujukan untuk mereka yang mau bereksplorasi lebih dan berani mengambil resiko. Namun, Zaman sudah semakin bekembang. Teknologi juga semakin berada di garis depan. Begitu pula GNU/Linux. Saat ini GNU/ tidak lagi seseram dulu. Banyak Pengembang berlomba-lomba merombak tampilan GUI OS berbasis GNU/Linux. GUI sudah semakin mudah dan cantik.
-
-
 
 Sejak menggunakan GNU/Linux total, saya mulai aktif di grup-grup berbasis GNU/Linux. Meskipun, pada dasarnya saya hanya seorang silent reader. Saya lebih suka membaca postingan orang-orang. Jika saya memiliki kemampuan untuk berkontribusi memecahkan masalah, maka saya akan mencoba memberikan solusi. Saya juga mendapatkan banyak pengetahuan dan inspirasi dari postingan-postingan yang ada. Saya juga mulai aktif membaca dokumentasi dari setiap paket-paket aplikasi yang tidak sepenuhnya saya pahami. Sebagian besar dalam bahasa inggris. Pengetahuan D3 bahsa inggris saya sangat bermanfaat di sini. Alhamdulillah, saya bisa mengeimplementasikan ilmu yang saya peroleh baik dari SMK maupun Kuliah. Saat ini, saya masih tetap belajar. Karena dunia GNU/Linux luas. Seberapa luas? Tergantung bagaimana anda memikirkannya.
