--- a/src/blog/free-software.mdx
+++ b/src/blog/free-software.mdx
@@ -2,6 +2,7 @@
 path: "/blog/free-software"
 date: "2017-03-12"
 title: "Free Software, Sekarang dan Masa yang Akan Datang"
+banner: ./images/polyglot-banner.jpg
 ---
 
 Assalamualaikum kawan-kawan blogger sekalian. Saya ingin berbagi sebuah pengalaman kecil dan sederhana namun sangat bermakna dalam kehidupan saya. Tulisan saya ini terinspirasi dari teman-teman blogger maupun aktifis opensource dan free software di sosial media mengenai sebuah pilihan. Ya, pilihan untuk beralih sepenuhnya ke sistem operasi bebas.
