--- a/src/blog/perjalanan-mengenal-coding-1.mdx
+++ b/src/blog/perjalanan-mengenal-coding-1.mdx
@@ -2,6 +2,7 @@
 path: "/blog/perjalanan-mengenal-coding-1"
 date: "2017-03-12 12:04:00"
 title: "Perjalanan Mengenal Coding 1"
+banner: ./images/polyglot-banner.jpg
 ---
 
 Sebelumnya, saya sudah mengenal sangat sedikit tentang programming. Namun, itu 6 tahun yang lalu. Saat dimana saya masih menghabiskan sebagian besar waktu  dengan hal-hal yang belum pasti. Masa-masa SMK ( vokasi Teknologi Komputer dan Jaringan ). Tentu, saat itu saya sudah lupa bagaimana berinteraksi dengan bahasa pemrograman. Saat itu pun, di SMK, saya tidak banyak mengetahui bahasa pemrograman. 
