--- a/src/blog/satukan-visi.mdx
+++ b/src/blog/satukan-visi.mdx
@@ -2,6 +2,7 @@
 path: "/blog/satukan-visi"
 date: "2017-03-26 09:34:00"
 title: "Satukan Visi"
+banner: ./images/polyglot-banner.jpg
 ---
 
 Saya tidak sendirian, ada banyak orang dengan visi yang sama maupun visi yang lebih hebat sebelum saya menyuarakan tentang open source, free software maupun GNU/Linux. Semoga kedepan juga akan banyak bermunculan individu kuat dan sadar akan penting sebuah pembelajaran khususnya di dunia IT. Saya terinspirasi dengan tulisan-tulisan dari blog wordpress dari seorang yang bernama Ade Malsasa Akbar.
