formatting mdx. add new image assets

--- a/src/blog/perjalanan-mengenal-coding-1.mdx
+++ b/src/blog/perjalanan-mengenal-coding-1.mdx
@@ -2,19 +2,15 @@
 path: "/blog/perjalanan-mengenal-coding-1"
 date: "2017-03-12 12:04:00"
 title: "Perjalanan Mengenal Coding 1"
-banner: ./images/polyglot-banner.jpg
+banner: ./images/laptop-tempur.jpg
 ---
 
-Sebelumnya, saya sudah mengenal sangat sedikit tentang programming. Namun, itu 6 tahun yang lalu. Saat dimana saya masih menghabiskan sebagian besar waktu  dengan hal-hal yang belum pasti. Masa-masa SMK ( vokasi Teknologi Komputer dan Jaringan ). Tentu, saat itu saya sudah lupa bagaimana berinteraksi dengan bahasa pemrograman. Saat itu pun, di SMK, saya tidak banyak mengetahui bahasa pemrograman. 
+Sebelumnya, saya sudah mengenal sangat sedikit tentang programming. Namun, itu 6 tahun yang lalu. Saat dimana saya masih menghabiskan sebagian besar waktu dengan hal-hal yang belum pasti. Masa-masa SMK ( vokasi Teknologi Komputer dan Jaringan ). Tentu, saat itu saya sudah lupa bagaimana berinteraksi dengan bahasa pemrograman. Saat itu pun, di SMK, saya tidak banyak mengetahui bahasa pemrograman.
 
 Sedikit banyak yang saya ingat adalah membuat database mysql via command line (tanpa gui). Selebihnya saya tidak tahu, baik itu bahasa populer seperti java, C ataupun web. Sempat juga belajar cms Joomla, tapi itu hanya sekedar mengganti tampilan dan instalasi dasar. Tidak banyak yang saya pelajari di SMK. Entah karena dari sistem yang diterapkan di SMK yang kurang efektif, atau saya memang tidak punya semangat belajar. Saat itu saya juga belum memiliki perangakat komputer. Memiliki benda bernama HP saja, saya sudah sangat bersyukur.
 
-
-
 Setelah masuk perguruan tinggi, alhamdulillah saya bisa membeli laptop dari beasiswa dan uang orang tua. Walaupun hanya ditenagai processor dual core, saya sangat senang. Saya bisa berinteraksi dan mulai bereksperimen. Saya mulai mengenal dan kembali tertarik dengan dunia programming. Kebetulan juga, saudara saya kuliah di bidang TI. Teman kecil saya juga sama kuliah di bidang TI. Hanya saya saja yang melenceng ke jalur bahasa inggris. Jadi, setiap ada waktu, misalnya pas liburan semester, kami bertemu untuk sekedar sharing, coba-coba buat inovasi di dunia teknologi sambil menikmati akses internet di wifi id corner.
 
-
-
-Pertama kali mencoba eksplorasi, saya jatuh cinta denga bahasa java. Bahasa yang pertama kali saya coba eksplorasi adalah java. Walaupun, awal-awalnya saya seperti orang buta huruf diantara baris-baris kode yang 100% saya tidak paham maksudnya. Namun, karena penasaran. Saya terus mencoba. Saya mencari referensi kesana kemari. Download bergiga-giga video dari youtube. 
+Pertama kali mencoba eksplorasi, saya jatuh cinta denga bahasa java. Bahasa yang pertama kali saya coba eksplorasi adalah java. Walaupun, awal-awalnya saya seperti orang buta huruf diantara baris-baris kode yang 100% saya tidak paham maksudnya. Namun, karena penasaran. Saya terus mencoba. Saya mencari referensi kesana kemari. Download bergiga-giga video dari youtube.
 
 Kata teman-teman saya, java merupakan bahasa yang tidak mudah dipahami. Karena memang java menggunakan paradigma OOP. Benda apa lagi itu? Saya bahkan tidak tau tentang OOP. Jelas teman dan saudara saya tau, karena itu mata kuliah yang mereka geluti. Saya juga tidak mau kalah, saya mencari referensi mengenai OOP. Dan memang, memahami OOP itu tidak mudah. Pertama kali saya mencoba memahaminya, saya berakhir dengan pikiran yang berputar-putar alias tidak mudeng.
