--- a/src/blog/ssl-dan-tls.mdx
+++ b/src/blog/ssl-dan-tls.mdx
@@ -2,6 +2,7 @@
 path: "/blog/ssl-dan-tls"
 date: "2017-03-27 08:39:00"
 title: "SSL dan TLS"
+banner: ./images/ssl.png
 ---
 
 Sejak mengenal wireshark, atau network monitoring tool, saya menjadi agak sedikit paranoid dengan yang namanya security (Keamanan). Saya tidak menyadari bahwa semua lalu lintas data dalam sebuah jaringan dengan sangat mudah dapat dilihat oleh siapa saja dengan sedikit kemampuan monitoring network. Selain itu saya juga paranoid dengan plain-text. Alasan ini, menyebabkan saya terjun ke dunia security walaupun tidak begitu dalam. Saya mulai mengenal beberapa hal mengenai security term. Seperti encryption, SSL, TLS dan CA. Mungkin istilah-istilah tersebut cukup asing bagi anda. Namun, jika anda sering berinteraksi dengan keamanan jaringan. Kalian pasti akan mengenal istilah-istilah tersebut. Kali ini saya akan membahas SSL dan TLS berdasarkan pengalaman saya.
