--- a/blog/xdebug-docker-setting.mdx
+++ b/blog/xdebug-docker-setting.mdx
@@ -1,7 +1,7 @@
 ---
 path: "/blog/xdebug-docker-setting"
 date: "2020-07-03"
-title: "Setting Xdebug dengan Docker & PHPstorm IDE"
+title: "Setting Xdebug dengan Laradock Docker & PHPstorm IDE"
 banner: ./images/xdebug.png
 ---
 
@@ -15,7 +15,7 @@ Beberapa minggun ini saya berkutat dengan konfigurasi Xdebug. Saya coba mengumpu
 
 Tak kenal maka tak tahu😆. Mari kita berkenalan dulu dengan Xdebug.
 
-## Apa itu Xdebug?
+## Apa itu Xdebug?🤔
 
 Masih asing dengan istilah di atas? tidak masalah. Saya akan coba sederhanakan. Dari kata tersebut saya yakin Anda pasti dapat menebak. Yap, Anda benar. Xdebug berkorelasi dengan aktifitas debugging. Developer PHP veteran pastilah tidak asing dengan yang satu ini. Partner wajib PHP developer dalam berperang melawan kode bandel😅. Kode bandel biasanya disebabkan oleh diri kita sendiri. Jadi, sebenarnya saya mengajak Anda untuk melawan diri Anda sendiri agar lebih baik dalam menulis kode lewat debugging yang baik dan benar.
 
@@ -33,7 +33,7 @@ Anda ingin definisi resmi? Oke. Mari kita berkunjung ke laman resminya.
 
 Berdasarkan kutipan di atas, kita bisa coba sederhanakan, xdebug merupakan penunjang debugging pada development PHP. Xdebug ini hadir dalam bentuk ekstensi. Jadi defaultnya, dia tidak tersedia saat install PHP. Pada tutorial kali ini, saya akan menggunakan Docker.
 
-## Kenapa Docker?
+## Kenapa Docker?🤔
 
 Saat ini docker sudah mulai banyak dilirik developer. Alasannya? saya pribadi sih pilih docker karena fleksibelitas. Terkadang kita butuh lingkungan pengembangan yang berbeda. Misal, kita butuh PHP 5 untuk development apliksai A. di sisi lain, kita juga develop aplikasi B dengan minum versi PHP 7. Dengan Docker kita bisa switch lingkungan pengembangan dengan mudah tanpa saling interfensi.
 
@@ -45,6 +45,44 @@ Secara prinsip, konfigurasi Xdebug dari docker maupun dari tanpa docker sama. Ka
 
 Screenshoot diatas merupakan hasil dari phpinfo yang mana Xdebug berstatus enabled. Xdebug siap dikonfigurasi bersama IDE PHPStorm.
 
-## PHPStorm? Kenapa tidak Vscode?
+## PHPStorm? Kenapa tidak Vscode?🤔
 
 Sebenarnya saya sudah mencoba keduanya. Menurut saya pribadi konfigurasinya hampir sama. Yang membedakan ialah PHPStorm lebih user friendly. Semua konfigurasi Xdebug tersedia dalam bentuk UI yang memudahkan pengguna. Vscode lebih fleksibel karena kita menulis langsung konfigurasi dalam satu file khusus.
+
+## Let's Do the Thing 💻
+
+Pastikan anda sudah menyiapkan laradock pada lokal komputer anda. Jika belum, coba ikuti langkah langkahnya [disini](https://laradock.io/getting-started/). Laradock memakai command `docker-compose` untuk administrasi semua docker containernya. Langkah yang paling mudah ialah melakukan eksekusi command pad terminal `docker-compose up -d mysql apache2 phpmyadmin`
+
+![docker compose](./images/docker-compose.png)
+
+Perintah ini akan melakukan pengecekan apakah container docker sudah ada atau belum pada lokal komputer. Jika belum ada, docker akan mengunduh image yang dibutuhkan kemudian melakukan build sesuai resep [Dockerfile](https://docs.docker.com/engine/reference/builder/) yang ada. Jika kita perhatikan, folder Laradock akan berisi banyak folder dengan resep Dockerfile masing-masing. Dalam hal ini, kita hanya memerlukan service mysql, apache2 dan phpmyadmin. Perintah `-d` akan membuat service container berjalan dilatar belakang dalam mode `detach`. Pada mode ini, service container akan tetap berjalan dan Anda bisa beraktifitas kembali menggunakan terminal. Tanpa command `-d` posisi terminal Anda akan terus memantau service container dan jika Anda menekan key `ctr + c`, container anda Akan berhenti.
+
+![Laradock dir](./images/laradock-dir.png)
+
+Untuk mengetahui apakah docker container berjalan dengan baik, Anda bisa melakukan eksekusi command
+`docker-compose ps`
+
+![Laradock dir](./images/docker-ps.png)
+
+## Touch the .env File
+
+Seperti yang saya sebutkan di awal, Xdebug merupakan ekstensi. Jadi kita harus integrasi dengan PHP. Sama dengan Laradock, Xdebug belum terintegrasi. Semua konfigurasi dan Administrasi container docker ada dalam satu single file `.env`. Banyak parameter yang bisa Anda atur, termasuk integrasi Xdebug. Silahkan buka file .env di dalam folder Laradock. Ada 2 parameter yang harus Anda ganti nilainya menjadi `true` yaitu `PHP_FPM_INSTALL_XDEBUG` dan `WORKSPACE_INSTALL_XDEBUG`. Apa sebenarnya ini? parameter ini akan mengirim perintah saat build container PHP untuk mengaktifkan Xdebug. Kenapa 2 parameter yang dibutuhkan? Menurut sumber resminya pada laman official Laradock, kita memang harus mengganti 2 parameter tersebut. Namun saya belum paham mengapa. Asumsi saya container workspace ini dibutuhkan pada internal eksekusi docker container Laradock.
+
+Karena kita memelakukan perubahan pada parameter `.env`, container kita perlu dibuat ulang agar perubahan terbaru dapat diterapkan. Lakukan eksekusi `docker-compose build workspace php-fpm` untuk membuat kembali container php-fpm dan workspace. Jika berhasil, Anda seharusnya dapat melihat Xdebug aktif pada `phpinfo()`.
+
+## Konfigurasi xdebug.ini
+
+Selanjutnya, kita konfigurasi file `xdebug.ini` agar container dapat menerima perintah-perintah yang dimengerti Xdebug. File konfigurasi ini ada pada 2 tempat. Sama Seperti pada .env di atas, kita harus konfigurasi untuk container php-fpm dan workspace.
+
+![xdebug ini](./images/xdebug-ini.png)
+
+> Konfigurasi xdebug.ini
+- xdebug.remote_enable=1
+- xdebug.remote_autostart=1
+- xdebug.remote_log=/var/www/xdebug.log
+- xdebug.remote_connect_back=0
+- xdebug.remote_port=9005
+- xdebug.idekey=PHPSTORM
+- xdebug.remote_host=docker.for.mac.localhost
+- xdebug.remote_handler="dbgp"
+
