--- a/blog/xdebug-docker-setting.mdx
+++ b/blog/xdebug-docker-setting.mdx
@@ -7,11 +7,11 @@ banner: ./images/banner-xdebug.png
 
 Ini merupakan tulisan pertama saya yang bersifat pembahasan teknis. Tulisan ini saya dedikasikan kepada [Kang Hendi](https://github.com/hendisantika). Beliau merupakan sponsor saya. Beliau mempercayakan klaim lisensi PHPstorm kepada saya untuk digunakan dalam produktifitas Development harian. InsyaAllah development kedepan bisa lebih produktif dengan PHPstorm.
 
-Debugging memang hal cukup asing khususnya di ranah PHP development. Kebanyakan pemula (tidak terlepas saya juga) sering menggunakan metode sederhana dalam menganlisa kode, menemukan bug dan error logic pada kode. Metode `var_dump()` dan bahkan mungkin `echo` masih menjadi pilihan. Cara tradisional, namun mudah dan cukup populer. Nah, agar kita bisa menjadi developer yang baik dan benar, kita perlu mencari cara memudahkan hidup kita sendiri😄. Salah satunya dengan menerapkan teknik debugging.
+Debugging memang hal cukup asing khususnya di ranah PHP development. Kebanyakan pemula (tidak terlepas saya juga) sering menggunakan metode sederhana dalam menganlisa kode, menemukan bug dan mengatasi error logic pada kode. Metode `var_dump()` dan bahkan mungkin `echo` masih menjadi pilihan. Cara tradisional, namun mudah dan cukup populer. Nah, agar kita bisa menjadi developer yang baik dan benar, kita perlu mencari cara memudahkan hidup kita sendiri😄. Salah satunya dengan menerapkan teknik debugging.
 
 Mengingat Xdebug memerlukan pengaturan khusus untuk bisa terintegrasi ke IDE populer zaman now macam Vscode dan PHPStorm, perlu adanya tutorial detail integrasi Xdebug ini. Pada artikel ini, saya akan coba jelaskan langkah-langkah integrasi Xdebug dengan kombinasi Docker dan PHPStorm IDE. Hal mendasar mengapa perlu adanya tutorial secara jelas dan lengkap ialah berdasarkan pada pengalaman pribadi saya.
 
-Beberapa minggun ini saya berkutat dengan konfigurasi Xdebug. Saya coba mengumpulkan beberapa informasi. Istilah kerennya research😁. Beberapa tutorial memang bagus dan to do point. Namun, ada Beberapa hal yang mungkin terlihat sepele tapi jarang disebutkan secara jelas.
+Beberapa minggun ini saya berkutat dengan konfigurasi Xdebug. Saya coba mengumpulkan beberapa informasi. Istilah kerennya research😁. Beberapa tutorial memang bagus dan to the point. Namun, ada Beberapa hal yang mungkin terlihat sepele tapi jarang disebutkan secara jelas.
 
 Tak kenal maka tak tahu😆. Mari kita berkenalan dulu dengan Xdebug.
 
@@ -35,23 +35,23 @@ Berdasarkan kutipan di atas, kita bisa coba sederhanakan, xdebug merupakan penun
 
 ## Kenapa Docker?🤔
 
-Saat ini docker sudah mulai banyak dilirik developer. Alasannya? saya pribadi sih pilih docker karena fleksibelitas. Terkadang kita butuh lingkungan pengembangan yang berbeda. Misal, kita butuh PHP 5 untuk development apliksai A. di sisi lain, kita juga develop aplikasi B dengan minum versi PHP 7. Dengan Docker kita bisa switch lingkungan pengembangan dengan mudah tanpa saling interfensi.
+Saat ini docker sudah mulai banyak dilirik developer. Alasannya? saya pribadi sih pilih docker karena fleksibelitas. Terkadang kita butuh lingkungan pengembangan yang berbeda. Misal, kita butuh PHP 5 untuk development apliksai A. di sisi lain, kita juga develop aplikasi B dengan minum versi PHP 7. Dengan Docker kita bisa switch lingkungan pengembangan dengan mudah tanpa saling intervensi.
 
 Saya sendiri memakai [Laradock](https://laradock.io) untuk aktifitas pengembangan PHP sehari-hari. Docker tidak akan secara detail dibahas di sini. Saya asumsikan Anda sudah familiar dengan docker Development. Anda bisa mengunjungi laman resmi dokumentasi [Docker](https://docs.docker.com/get-docker/) untuk memulai menerapkan development berbasis Docker.
 
-Secara prinsip, konfigurasi Xdebug dari docker maupun dari tanpa docker sama. Karena memang Fokusnya bukan pada Dockernya, namun pada konfigurasinya. Pastikan dulu Xdebug telah terintegrasi ke PHP yang anda gunakan. Anda bisa periksa apakah Xdebug sudah terintegrasi dengan PHP yang anda pakai. Anda bisa memanfaat native API PHP `phpinfo()`
+Secara prinsip, konfigurasi Xdebug dari docker maupun tanpa docker sama. Karena memang Fokusnya bukan pada Dockernya, namun pada konfigurasinya. Pastikan dulu Xdebug telah terintegrasi ke PHP yang anda gunakan. Anda bisa periksa apakah Xdebug sudah terintegrasi dengan PHP yang anda pakai. Anda bisa memanfaat native API PHP `phpinfo()`
 
 ![phpinfo](./images/phpinfo.png)
 
 Screenshoot diatas merupakan hasil dari phpinfo yang mana Xdebug berstatus enabled. Xdebug siap dikonfigurasi bersama IDE PHPStorm.
 
-## PHPStorm? Kenapa tidak Vscode?🤔
+## PHPStorm? Why Not Vscode?🤔
 
-Sebenarnya saya sudah mencoba keduanya. Menurut saya pribadi konfigurasinya hampir sama. Yang membedakan ialah PHPStorm lebih user friendly. Semua konfigurasi Xdebug tersedia dalam bentuk UI yang memudahkan pengguna. Vscode lebih fleksibel karena kita menulis langsung konfigurasi dalam satu file khusus.
+Sebenarnya saya sudah mencoba keduanya. Menurut saya pribadi konfigurasinya hampir sama. Yang membedakan ialah PHPStorm lebih user friendly. Semua konfigurasi Xdebug tersedia dalam bentuk UI yang memudahkan pengguna. Vscode lebih fleksibel karena kita menulis langsung konfigurasi dalam satu File khusus.
 
 ## Let's Do the Thing 💻
 
-Pastikan anda sudah menyiapkan laradock pada lokal komputer anda. Jika belum, coba ikuti langkah langkahnya [disini](https://laradock.io/getting-started/). Laradock memakai command `docker-compose` untuk administrasi semua docker containernya. Langkah yang paling mudah ialah melakukan eksekusi command pad terminal `docker-compose up -d mysql apache2 phpmyadmin`
+Pastikan anda sudah menyiapkan Laradock pada lokal komputer anda. Jika belum, coba ikuti langkah langkahnya [disini](https://laradock.io/getting-started/). Laradock memakai command `docker-compose` untuk administrasi semua docker containernya. Langkah yang paling mudah ialah melakukan eksekusi command pad terminal `docker-compose up -d mysql apache2 phpmyadmin`
 
 ![docker compose](./images/docker-compose.png)
 
@@ -66,7 +66,7 @@ Untuk mengetahui apakah docker container berjalan dengan baik, Anda bisa melakuk
 
 ## Touch the .env File
 
-Seperti yang saya sebutkan di awal, Xdebug merupakan ekstensi. Jadi kita harus integrasi dengan PHP. Sama dengan Laradock, Xdebug belum terintegrasi. Semua konfigurasi dan Administrasi container docker ada dalam satu single file `.env`. Banyak parameter yang bisa Anda atur, termasuk integrasi Xdebug. Silahkan buka file .env di dalam folder Laradock. Ada 2 parameter yang harus Anda ganti nilainya menjadi `true` yaitu `PHP_FPM_INSTALL_XDEBUG` dan `WORKSPACE_INSTALL_XDEBUG`. Apa sebenarnya ini? parameter ini akan mengirim perintah saat build container PHP untuk mengaktifkan Xdebug. Kenapa 2 parameter yang dibutuhkan? Menurut sumber resminya pada laman official Laradock, kita memang harus mengganti 2 parameter tersebut. Namun saya belum paham mengapa. Asumsi saya container workspace ini dibutuhkan pada internal eksekusi docker container Laradock.
+Seperti yang saya sebutkan di awal, Xdebug merupakan ekstensi. Jadi kita harus terintegrasi dengan PHP. Sama dengan Laradock, Xdebug belum terintegrasi. Semua konfigurasi dan Administrasi container docker ada dalam satu single file `.env`. Banyak parameter yang bisa Anda atur, termasuk integrasi Xdebug. Silahkan buka file .env di dalam folder Laradock. Ada 2 parameter yang harus Anda ganti nilainya menjadi `true` yaitu `PHP_FPM_INSTALL_XDEBUG` dan `WORKSPACE_INSTALL_XDEBUG`. Apa sebenarnya ini? parameter ini akan mengirim perintah saat build container PHP untuk mengaktifkan Xdebug. Kenapa 2 parameter yang dibutuhkan? Menurut sumber resminya pada laman official Laradock, kita memang harus mengganti 2 parameter tersebut. Namun saya belum paham mengapa. Asumsi saya container workspace ini dibutuhkan pada internal eksekusi docker container Laradock.
 
 Karena kita memelakukan perubahan pada parameter `.env`, container kita perlu dibuat ulang agar perubahan terbaru dapat diterapkan. Lakukan eksekusi `docker-compose build workspace php-fpm` untuk membuat kembali container php-fpm dan workspace. Jika berhasil, Anda seharusnya dapat melihat Xdebug aktif pada `phpinfo()`.
 
@@ -96,11 +96,11 @@ Mari kita coba urai satu persatu. Ada cukup banyak parameter disana. Ada 3 menur
 
 - Penggunaan parameter lainnya anda bisa ikuti yang telah saya tulis di atas. Beberapa memang mungkin tidak diperlukan untuk case tertentu.
 
-Seperti biasa, karena kita melakukan perubahan konfigurasi. Container kita perlu dibuat ulang. Jalankan perintah `docker-compose build workspace php-fpm`. Nak sekarang kita akan konfigurasi IDE-nya yaitu PHPStorm.
+Seperti biasa, karena kita melakukan perubahan konfigurasi. Container kita perlu dibuat ulang. Jalankan perintah `docker-compose build workspace php-fpm`. Nah sekarang kita akan konfigurasi IDE-nya yaitu PHPStorm.
 
 ## Konfigurasi PHPStorm
 
-Saya merupakan pengguna baru PHPStorm. Walapun saya sudah memakai salah satu produk berbasis [JetBrains](https://www.jetbrains.com) yaitu Android Studio. PHPStorm ini sangat cocok buat mereka yang ingin dimanjakan lewat UI yang user friendly. Hampir semua konfigurasi tersedia berbasis UI tanpa perlu membuat file konfigurasi sendiri. Untuk mengakses semua konfigurasi pilih menu preferences. Jika berbasis macOS anda cukup menekan tombol `⌘ + ,`.
+Saya merupakan pengguna baru PHPStorm. Walapun saya sudah memakai salah satu produk berbasis [JetBrains](https://www.jetbrains.com) yaitu Android Studio. PHPStorm ini sangat cocok buat mereka yang ingin dimanjakan lewat UI yang user friendly. Hampir semua konfigurasi tersedia berbasis UI tanpa perlu membuat File konfigurasi sendiri. Untuk mengakses semua konfigurasi pilih menu preferences. Jika berbasis macOS Anda cukup menekan tombol `⌘ + ,`.
 
 ![phpstorm-pref](./images/phpstorm-pref.png)
 
@@ -127,7 +127,7 @@ Konfigurasi selesai, Untuk beralih ke mode debug pada PHPStorm IDE,  Anda bisa a
 ![phpstorm-pref](./images/start-listening.png)
 
 
-Silahkan anda coba membuat breakpoint pada file php Anda. Silahkan klik ke sebelah kanan line number. Akan muncul bulatan merah. Nah, itu yang dinamakan breakpoint.
+Silahkan Anda coba membuat breakpoint pada file php Anda. Silahkan klik ke sebelah kanan line number. Akan muncul bulatan merah. Nah, itu yang dinamakan breakpoint.
 
 ![phpstorm-pref](./images/breakpoint.png)
 
@@ -135,7 +135,7 @@ Ketika kita mereload browser dalam contoh saya `index.php` maka browser akan ter
 
 ![phpstorm-pref](./images/breakpoint-stop.png)
 
-Nah, dari situ anda akan tau kondisi variable-variable yang ada. Jika Anda perhatikan pada panel bawah, ada beberapa informasi variable Seperti `$_SERVER`,`$_COOKIE`. Dengan informasi yang cukup detail seperti ini, pengguna debug var_dump atau manual echo menurut saya sudah ter-cover di sini. Pada tingkat advanced, bahkan anda bisa menganlisa alur eksekusi kode Framework besar macam Laravel.
+Nah, dari situ Anda akan tau kondisi variable-variable yang ada. Jika Anda perhatikan pada panel bawah, ada beberapa informasi variable Seperti `$_SERVER`,`$_COOKIE`. Dengan informasi yang cukup detail seperti ini, pengguna debug var_dump atau manual echo menurut saya sudah ter-cover di sini. Pada tingkat advanced, bahkan Anda bisa menganalisa alur eksekusi kode Framework besar macam Laravel.
 
 ## Sum up!
 
