feat(repo): improve blog post content

--- a/blog/selamat-datang-di-era-polyglot-programming.mdx
+++ b/blog/selamat-datang-di-era-polyglot-programming.mdx
@@ -5,11 +5,22 @@ title: "Selamat Datang di Era Polyglot Programming"
 banner: ./images/polyglot-banner.jpg
 ---
 
-Polyglot Programming? Apakah anda pernah mendengar istilah tersebut sebelumnya? Polyglot programming merupakan hal yang memang belum begitu dikenal kebanyakan developer. Saya sendiri baru mengetahui istilah tersebut dari video youtube seorang developer senior Endy Muhardin. Dalam sebuah video kuliahnya yang diunggah ke Youtube akun resmi Artivisi Media, beliau memaparkan perihal Polyglot programming dengan jelas
+Polyglot Programming? Apakah anda pernah mendengar istilah tersebut sebelumnya? Polyglot programming merupakan hal yang memang belum begitu dikenal kebanyakan developer. Saya sendiri baru mengetahui istilah tersebut dari video youtube seorang developer senior [Endy Muhardin](https://software.endy.muhardin.com). Dalam sebuah video kuliahnya yang diunggah ke Youtube akun resmi [Artivisi Media](https://www.youtube.com/watch?v=mgf2ofYx8OE), beliau memaparkan perihal Polyglot programming dengan jelas
 
 Setidaknya, dari video tersebut, saya mendapatkan pembelajaran yang membuka pikiran serta wawasan saya.
 
-Menguasai atau Fokus pada satu bahasa pemrograman saja tidak akan menjawab tantangan kedepan
-Semua orang bisa jadi superman ( Menguasai banyak bahasa pemrograman ) dengan memahami fundamental dari pemrograman itu sendiri.
-Jam terbang, Pengalaman dan kualitas akan membuktikan kematangan seorang developer
+1. Menguasai atau Fokus pada satu bahasa pemrograman saja tidak akan menjawab tantangan kedepan
+2. Semua orang bisa jadi superman ( Menguasai banyak bahasa pemrograman ) dengan memahami fundamental dari pemrograman itu sendiri.
+3. Jam terbang, Pengalaman dan kualitas akan membuktikan kematangan seorang developer
+
 Anda tidak sependapat dengan saya? tidak masalah. Awalnya saya juga memiliki mindset berlawanan. Namun, setelah saya mencermati dan mengulang lagi melihat video tutorial tersebut, akhirnya saya memahaminya.
+
+<iframe
+  allowfullscreen="true"
+  class="YOUTUBE-iframe-video"
+  data-thumbnail-src="https://i.ytimg.com/vi/mgf2ofYx8OE/0.jpg"
+  frameborder="0"
+  height="400"
+  src="https://www.youtube.com/embed/mgf2ofYx8OE?feature=player_embedded"
+  width="100%"
+></iframe>
